fixed few dark mode elements , added close to filter

--- a/src/index.css
+++ b/src/index.css
@@ -110,20 +110,19 @@ input:focus {
 }
 
 .underline-low {
-  color: #ccc;
+  color: var(--font-color);
 }
 
-.underline-low:hover {
-  color: #fff;
-}
 .underline-high {
-  color: #fff;
+  color: var(--font-color);
   font-size: 1rem;
 }
 
-.underline-high:hover {
-  color: #ccc;
+.underline-high:hover,
+.underline-low:hover {
+  opacity: 0.7;
 }
+
 /* -------------------------------------------------------------------------------------------------- */
 
 /* page content */
@@ -333,7 +332,7 @@ input:focus {
 }
 
 .close-results:hover {
-  transform: scale(1.3);
+  transform: translateY(-50%) scale(1.3);
   color: #222;
 }
 
@@ -451,7 +450,6 @@ input:focus {
   border-radius: 14px;
   height: fit-content;
   overflow: hidden;
-
   width: 100%;
   transform: scale(1);
   transition: 0.3s;
@@ -609,7 +607,7 @@ input:focus {
 
 .game.selected .game-wrapper {
   transform: scale(1.02);
-  z-index: 500;
+  z-index: 50;
 }
 
 .game.selected .game-wrapper {
@@ -871,9 +869,9 @@ input:focus {
   appearance: none;
   padding: 5px 70px 5px 10px;
   font-size: 1rem;
-  border: 1px solid #eee;
+  border: 1px solid var(--font-color);
   background-color: transparent;
-  color: #fff;
+  color: var(--font-color);
   margin-right: 20px;
   margin-bottom: 5pxh;
   border-radius: 7px;
@@ -902,7 +900,7 @@ input:focus {
   text-align: left;
   font-size: 0.85rem;
   margin-bottom: 5px;
-  color: #ccc;
+  color: var(--font-color);
 }
 
 .-btns-icon svg {
@@ -1163,7 +1161,7 @@ input:focus {
 .metascore {
   padding: 4px;
   border: 1px solid green;
-  color: lightgreen;
+  color: green;
   border-radius: 7px;
   font-size: 1.08rem;
 }
@@ -1478,8 +1476,9 @@ input:focus {
   border-radius: 7px;
   gap: 10px;
   background-color: var(--sec-color);
+  border: 2px solid var(--sec-color);
   width: calc(50% - 10px);
-  padding: 10px;
+  padding: 8px 10px;
   cursor: pointer;
   transition: 0.3s;
 }
@@ -1488,8 +1487,6 @@ input:focus {
   .stores-wrapper {
     flex-wrap: nowrap;
     flex-direction: column;
-    /* row-gap: 20px; */
-    /* gap: 0; */
   }
 
   .store {
@@ -1498,7 +1495,7 @@ input:focus {
 }
 
 .store:hover {
-  background-color: var(--font-color);
+  background-color: #eee;
 }
 
 .store:hover h2,
@@ -1656,9 +1653,14 @@ input:focus {
   letter-spacing: 1px;
 }
 
+.dev h3 {
+  color: #eeeeee;
+}
+
 .dev-positions span {
   text-transform: capitalize;
   font-size: 0.9rem;
+  color: #eeeeee;
 }
 
 .dev-main img {
@@ -1704,6 +1706,7 @@ input:focus {
 .dev-game h4 {
   text-decoration: underline;
   font-weight: 400;
+  color: #eeeeee;
 }
 
 /* library */
@@ -1848,9 +1851,9 @@ input:focus {
   display: flex;
   flex-direction: column;
   gap: 7px;
-  padding: 12px 7px;
+  padding: 8px 5px 12px 9px;
   border-radius: 7px;
-  z-index: 10000;
+  z-index: 100;
   transition: 0.3s;
 }
 
@@ -1865,9 +1868,22 @@ input:focus {
   color: #000;
   border-bottom: 1px solid transparent;
 }
-.filter > div > div > span:hover {
+.filter > div > div > span:not(:first-child):hover {
   padding-left: 5px;
   border-bottom: 1px solid gray;
+}
+
+.close-filter {
+  align-self: end;
+  width: fit-content;
+  font-size: 1.4rem;
+  font-weight: bold;
+  padding: 0 7px;
+  transition: 0.5s;
+}
+
+.close-filter:hover {
+  transform: rotate(90deg) scale(1.2);
 }
 
 /* sidebar ----------------------------------------------------------------------------- */
